refactor: replace deprecated Paths.get() with Path.of()